--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ html,
 body,
 #root,
 .app {
+  font-family: "Poppins", sans-serif;
   height: 100%;
   background-color: #010026;
   @apply text-white;
